--- a/webapps/frontend/operaton-commons-ui/lib/widgets/footer/cam-widget-footer.scss
+++ b/webapps/frontend/operaton-commons-ui/lib/widgets/footer/cam-widget-footer.scss
@@ -1,9 +1,9 @@
 body {
-  padding-bottom: @footer-height;
+  padding-bottom: $footer-height;
 }
 
 [cam-widget-footer] {
-  .cam-corporate-footer-base();
+  @include cam-corporate-footer-base();
 
   text-align: right;
 }
