--- a/webapps/frontend/operaton-commons-ui/lib/widgets/dmn-viewer/cam-widget-dmn-viewer.scss
+++ b/webapps/frontend/operaton-commons-ui/lib/widgets/dmn-viewer/cam-widget-dmn-viewer.scss
@@ -1,21 +1,27 @@
-@import (less) "dmn-js/dist/assets/dmn-js-drd.css";
-@import (less) "dmn-js/dist/assets/dmn-js-shared.css";
-@import (less) "dmn-js/dist/assets/dmn-js-decision-table.css";
-@import (less) "dmn-js/dist/assets/dmn-js-decision-table-controls.css";
-@import (less) "dmn-js/dist/assets/dmn-js-literal-expression.css";
-@import (less) "dmn-js/dist/assets/dmn-font/css/dmn.css";
+/* dmn-js assets imports */
+@import "~dmn-js/dist/assets/dmn-js-drd.css";
+@import "~dmn-js/dist/assets/dmn-js-shared.css";
+@import "~dmn-js/dist/assets/dmn-js-decision-table.css";
+@import "~dmn-js/dist/assets/dmn-js-decision-table-controls.css";
+@import "~dmn-js/dist/assets/dmn-js-literal-expression.css";
+@import "~dmn-js/dist/assets/dmn-font/css/dmn.css";
 
 @font-face {
   font-family: 'dmn';
   src: url('~dmn-font/dist/font/dmn.eot?48901938');
-  src: url('~dmn-font/dist/font/dmn.eot?48901938#iefix') format('embedded-opentype'), url('~dmn-font/dist/font/dmn.woff2?48901938') format('woff2'), url('~dmn-font/dist/font/dmn.woff?48901938') format('woff'), url('~dmn-font/dist/font/dmn.ttf?48901938') format('truetype'), url('~dmn-font/dist/font/dmn.svg?48901938#dmn') format('svg');
+  src: url('~dmn-font/dist/font/dmn.eot?48901938#iefix') format('embedded-opentype'),
+  url('~dmn-font/dist/font/dmn.woff2?48901938') format('woff2'),
+  url('~dmn-font/dist/font/dmn.woff?48901938') format('woff'),
+  url('~dmn-font/dist/font/dmn.ttf?48901938') format('truetype'),
+  url('~dmn-font/dist/font/dmn.svg?48901938#dmn') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 [cam-widget-dmn-viewer] {
   &[edit-mode="true"] {
-    @import (less) "diagram-js/assets/diagram-js.css";
+    // SCSS supports nested imports, though it's less common for raw CSS
+    @import "~diagram-js/assets/diagram-js.css";
   }
 
   th {
@@ -59,12 +65,13 @@
 
   .highlight .djs-outline {
     stroke-width: 2px !important;
-    stroke: @bpmn-highlight-border-color !important;
-    fill: fade(@bpmn-highlight-bg, 40%) !important;
+    stroke: $bpmn-highlight-border-color !important;
+    // fade(@color, 40%) becomes rgba($color, 0.4)
+    fill: rgba($bpmn-highlight-bg, 0.4) !important;
   }
 
   .highlight .djs-visual > :nth-child(1) {
-    fill: @bpmn-highlight-bg !important;
+    fill: $bpmn-highlight-bg !important;
   }
 
   .dmn-decision-table-container td:not(:first-child) {
@@ -80,17 +87,17 @@
 
   .navigation {
     position: absolute;
-    right: (@grid-gutter-width / 2);
-    width: @grid-gutter-width;
-    min-height: @grid-gutter-width;
+    right: calc(#{$grid-gutter-width} / 2);
+    width: $grid-gutter-width;
+    min-height: $grid-gutter-width;
 
     button {
       font-size: 20px;
       text-align: center;
       position: absolute;
-      width: @grid-gutter-width;
-      height: @grid-gutter-width;
-      color: @gray;
+      width: $grid-gutter-width;
+      height: $grid-gutter-width;
+      color: $gray-600; // Map @gray to $gray-600
       padding: 0;
       bottom: 0;
 
@@ -100,7 +107,7 @@
     }
 
     &.reset {
-      bottom: @grid-gutter-width * 3;
+      bottom: calc(#{$grid-gutter-width} * 3);
 
       span {
         top: 3px;
@@ -108,11 +115,11 @@
     }
 
     &.zoom {
-      bottom: (@grid-gutter-width / 2);
-      height: (@grid-gutter-width * 2);
+      bottom: calc(#{$grid-gutter-width} / 2);
+      height: calc(#{$grid-gutter-width} * 2);
 
       button.in {
-        bottom: (@grid-gutter-width * 1);
+        bottom: calc(#{$grid-gutter-width} * 1);
         border-bottom: 0;
 
         > span {
