--- a/webapps/frontend/operaton-commons-ui/lib/widgets/header/cam-widget-header.scss
+++ b/webapps/frontend/operaton-commons-ui/lib/widgets/header/cam-widget-header.scss
@@ -1,5 +1,5 @@
 body {
-  padding-top: @header-height;
+  padding-top: $header-height;
 }
 
 // Not nested to allow for custom CSS
@@ -13,14 +13,20 @@ body {
   }
 }
 
+// class removed in BS4. Necessary for header app dropdown.
+.dropdown-menu-right {
+  right: 0 !important;
+  left: auto !important;
+}
+
 [cam-widget-header] {
-  .cam-corporate-header();
+  @include cam-corporate-header();
 
   .ce-eol-banner {
-    background-color: @main-color;
+    background-color: $main-color;
     color: white;
     text-align: center;
-    height: @ce-banner-height;
+    height: $ce-banner-height;
     font-size: 0.9em;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -45,7 +51,7 @@ body {
       visibility: visible;
       display: block;
 
-      @media screen and (max-width: (@grid-float-breakpoint-max)) {
+      @media screen and (max-width: ($grid-float-breakpoint-max)) {
         visibility: hidden;
         display: none;
       }
@@ -53,11 +59,11 @@ body {
 
     :not(.dropdown-menu) > li {
       > view a {
-        .cam-corporate-header-menu-item-link();
+        @include cam-corporate-header-menu-item-link();
       }
 
       > button {
-        .cam-corporate-header-menu-item-button();
+        @include cam-corporate-header-menu-item-button();
       }
 
       &:hover,
@@ -70,10 +76,10 @@ body {
       }
 
       &.active {
-        background-color: @gray-lighter;
+        background-color: $gray-lighter;
 
         > view a {
-          color: @gray-base;
+          color: $black;
         }
       }
     }
@@ -82,15 +88,15 @@ body {
   .small-screen-warning {
     display: none;
     font-size: 18px;
-    height: @header-computed-height;
-    margin-right: (@header-computed-height / 4);
+    height: $header-computed-height;
+    margin-right: ($header-computed-height / 4);
     float: right;
 
     .glyphicon {
       margin-top: 10px;
     }
 
-    @media screen and (max-width: (@grid-float-breakpoint-max)) {
+    @media screen and (max-width: ($grid-float-breakpoint-max)) {
       display: inline-block;
     }
   }
