--- a/webapps/frontend/ui/cockpit/client/scripts/pages/tasks.scss
+++ b/webapps/frontend/ui/cockpit/client/scripts/pages/tasks.scss
@@ -8,7 +8,7 @@
   }
 
   #task-group-counts {
-    margin-bottom: @grid-gutter-width * 0.5;
+    margin-bottom: $grid-gutter-width * 0.5;
   }
 
   #multiple-groups-info {
