--- a/webapps/frontend/ui/cockpit/plugins/tasks/app/views/dashboard/task-dashboard.html
+++ b/webapps/frontend/ui/cockpit/plugins/tasks/app/views/dashboard/task-dashboard.html
@@ -1,6 +1,6 @@
 <!-- # CE - ui/cockpit/plugins/tasks/app/views/dashboard/task-dashboard.html -->
-<div class="dashboard-row">
-  <section class="col-xs-12 col-md-6">
+<div class="dashboard-row container-fluid row">
+  <section class="col-12 col-lg-6">
     <div class="inner">
       <header>
         <h1 class="section-title">{{ 'PLUGIN_TASK_ASSIGNMENT_BY_TYPE' | translate }}</h1>
@@ -42,7 +42,7 @@
     </div>
   </section>
 
-  <section class="col-xs-12 col-md-6">
+  <section class="col-12 col-lg-6">
     <div class="inner">
       <header>
         <h1 class="section-title">{{ 'PLUGIN_TASK_ASSIGNMENT_BY_GROUP' | translate }}</h1>
