--- a/webapps/frontend/ui/cockpit/client/styles/ctn.scss
+++ b/webapps/frontend/ui/cockpit/client/styles/ctn.scss
@@ -1,21 +1,24 @@
-@ctn-sidebar-width: 280px;
-@ctn-toolbar-width: 56px;
-@ctn-content-bottom-height: 350px;
-@ctn-resize-handle-width: 5px;
+// Variables
+$ctn-sidebar-width: 280px;
+$ctn-toolbar-width: 56px;
+$ctn-content-bottom-height: 350px;
+$ctn-resize-handle-width: 5px;
 
 .ctn-main {
   position: absolute;
-  top: @header-height;
-  bottom: @footer-height;
+  top: $header-height;
+  bottom: $footer-height;
   left: 0;
   right: 0;
   overflow: hidden;
-  background-color: @custom-gray-lighter;
+  background-color: $custom-gray-lighter;
 }
 
 .ctn-view {
   overflow: auto;
-  max-height: ~"calc(100vh - (@{header-height} + @{footer-height}))";
+  // Standard CSS calc works natively in SCSS; 
+  // ensure $header-height and $footer-height are defined in your variables file.
+  max-height: calc(100vh - (#{$header-height} + #{$footer-height}));
 }
 
 .ctn-wrapper {
@@ -25,12 +28,12 @@
   right: 0;
   bottom: 0;
   margin: 0;
-  background-color: @body-bg;
+  background-color: $body-bg;
 }
 
 .ctn-fixed-view {
   position: absolute;
-  top: @breadcrumb-height;
+  top: $breadcrumb-height;
   left: 0;
   bottom: 0;
   right: 0;
@@ -38,7 +41,7 @@
 }
 
 .ctn-header {
-  background: @custom-gray-lighter;
+  background: $custom-gray-lighter;
   height: 35px;
   display: table;
   width: 100%;
@@ -81,8 +84,8 @@
     font-size: 10px;
     width: 65px;
     line-height: 12px;
-    color: @gray-light;
-    text-shadow: 0 1px 0 @body-bg;
+    color: $gray-light;
+    text-shadow: 0 1px 0 $body-bg;
 
     &::after {
       position: absolute;
@@ -92,8 +95,8 @@
       content: ':';
       font-size: 20px;
       line-height: 20px;
-      color: darken(@gray-light, 10%);
-      text-shadow: 0 1px 0 @body-bg;
+      color: darken($gray-light, 10%);
+      text-shadow: 0 1px 0 $body-bg;
     }
   }
 
@@ -144,11 +147,11 @@
 }
 
 .ctn-content-container {
-  background-color: @custom-gray-lighter;
+  background-color: $custom-gray-lighter;
 }
 
 .ctn-sidebar {
-  width: @ctn-sidebar-width;
+  width: $ctn-sidebar-width;
   right: auto;
   overflow: hidden;
   overflow-y: auto;
@@ -175,13 +178,13 @@
 }
 
 .ctn-content {
-  left: @ctn-sidebar-width;
-  right: @ctn-toolbar-width;
+  left: $ctn-sidebar-width;
+  right: $ctn-toolbar-width;
   overflow: visible;
   z-index: 11;
-  background-color: @body-bg;
-  border-left: 1px solid @gray-lighter;
-  border-right: 1px solid @gray-lighter;
+  background-color: $body-bg;
+  border-left: 1px solid $gray-lighter;
+  border-right: 1px solid $gray-lighter;
 
   > div {
     position: absolute;
@@ -192,7 +195,7 @@
 
 .ctn-content-top {
   top: 0;
-  bottom: @ctn-content-bottom-height;
+  bottom: $ctn-content-bottom-height;
   z-index: 10;
 
   [cam-widget-bpmn-viewer],
@@ -204,22 +207,20 @@
 .ctn-content-bottom {
   top: auto;
   bottom: 0;
-  border-top: 1px solid @gray-lighter;
-  background: @custom-gray-lighter;
+  border-top: 1px solid $gray-lighter;
+  background: $custom-gray-lighter;
   overflow: hidden;
   z-index: 12;
 }
 
-// because `.ctn-content > div`
-// overrides `.ctn-content-bottom`
 div.ctn-content-bottom {
   right: 1px;
 }
 
 .ctn-toolbar {
   left: auto;
-  width: @ctn-toolbar-width;
-  background-color: @custom-gray-lighter;
+  width: $ctn-toolbar-width;
+  background-color: $custom-gray-lighter;
   text-align: center;
 
   .btn-toolbar {
@@ -237,8 +238,8 @@ a.expand-collapse {
   opacity: 0.6;
   padding: 0;
   z-index: 12;
-  background-color: fade(@body-bg, 90%);
-  border: 1px solid @gray-lighter;
+  background-color: rgba($body-bg, 0.9); // fade(90%) -> rgba(0.9)
+  border: 1px solid $gray-lighter;
   border-width: 0 1px 1px 0;
   border-radius: 0 0 4px 0;
   width: 20px;
@@ -283,16 +284,15 @@ a.expand-collapse {
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 0 (@grid-gutter-width * 0.5) (@grid-gutter-width * 0.5) (@grid-gutter-width * 0.5);
+  padding: 0 ($grid-gutter-width * 0.5) ($grid-gutter-width * 0.5) ($grid-gutter-width * 0.5);
 }
 
 .ctn-tabbed.ctn-content-bottom > h4 {
   margin: 2px 0 0 0;
-  padding: (@grid-gutter-width * 0.5) (@grid-gutter-width * 0.5) 5px (@grid-gutter-width * 0.5);
-  border-bottom: 1px solid @custom-gray-light;
+  padding: ($grid-gutter-width * 0.5) ($grid-gutter-width * 0.5) 5px ($grid-gutter-width * 0.5);
+  border-bottom: 1px solid $custom-gray-light;
 }
 
-// makes the tabs scroll horizontally when too wide
 .ctn-content-bottom ul.nav-tabs {
   overflow-x: auto;
   overflow-y: hidden;
@@ -312,7 +312,7 @@ a.expand-collapse {
   z-index: 15;
 
   &.horizontal {
-    height: @ctn-resize-handle-width;
+    height: $ctn-resize-handle-width;
     left: 0;
     right: 0;
     cursor: n-resize;
@@ -320,13 +320,13 @@ a.expand-collapse {
   }
 
   &.vertical {
-    width: @ctn-resize-handle-width;
+    width: $ctn-resize-handle-width;
     bottom: 0;
     top: 0;
     cursor: e-resize;
   }
 
   &:hover {
-    background-color: fade(@gray, 50);
+    background-color: rgba($gray, 0.5); // fade(50) -> rgba(0.5)
   }
 }
