--- a/webapps/frontend/ui/cockpit/client/styles/process-information.scss
+++ b/webapps/frontend/ui/cockpit/client/styles/process-information.scss
@@ -2,8 +2,8 @@
   padding: 10px;
 
   .null-value {
-    font-family: @font-family-monospace;
-    color: @gray-light;
+    font-family: $font-family-monospace;
+    color: $gray-light;
     display: inline-block;
   }
 
