--- a/webapps/frontend/ui/cockpit/plugins/base/app/views/processDefinition/update-suspension-state-action.html
+++ b/webapps/frontend/ui/cockpit/plugins/base/app/views/processDefinition/update-suspension-state-action.html
@@ -1,5 +1,5 @@
 <!-- # CE - operaton-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-action.html -->
-<a class="btn btn-default btn-toolbar btn-suspend-action"
+<a class="btn btn-outline-secondary mt-1 btn-suspend-action"
    href
    ng-click="openDialog()"
    uib-tooltip="{{'PLUGIN_SUSPENSION_SUSPEND_PROCESS' | translate}}"
@@ -8,7 +8,7 @@
   <span class="glyphicon glyphicon-pause"></span>
 </a>
 
-<a class="btn btn-default btn-toolbar"
+<a class="btn btn-outline-secondary mt-1"
    href
    ng-click="openDialog()"
    uib-tooltip="{{'PLUGIN_SUSPENSION_ACTIVATE_PROCESS' | translate}}"
