--- a/webapps/frontend/ui/cockpit/plugins/base/app/views/processInstance/add-variable-action.html
+++ b/webapps/frontend/ui/cockpit/plugins/base/app/views/processInstance/add-variable-action.html
@@ -1,5 +1,5 @@
 <!-- # CE - operaton-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-action.html -->
-<a class="btn btn-default btn-toolbar"
+<a class="btn btn-outline-secondary mt-1"
    href
    ng-click="openDialog()"
    uib-tooltip="{{ 'PLUGIN_ADD_VARIABLE_NEW_VARIABLE' | translate }}"
