--- a/webapps/frontend/ui/cockpit/plugins/base/app/views/processInstance/cancel-process-instance-action.html
+++ b/webapps/frontend/ui/cockpit/plugins/base/app/views/processInstance/cancel-process-instance-action.html
@@ -1,5 +1,5 @@
 <!-- # CE - operaton-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-action.html -->
-<a class="btn btn-default btn-toolbar"
+<a class="btn btn-outline-secondary mt-1"
    href
    ng-click="openDialog()"
    uib-tooltip="{{ 'PLUGIN_CANCEL_PROCESS_RUNNING_PROCESS_INSTANCE' | translate }}"
