--- a/webapps/frontend/ui/cockpit/plugins/base/app/views/processInstance/update-suspension-state-action.html
+++ b/webapps/frontend/ui/cockpit/plugins/base/app/views/processInstance/update-suspension-state-action.html
@@ -1,5 +1,5 @@
 <!-- # CE - operaton-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html -->
-<a class="btn btn-default btn-toolbar btn-suspend-action"
+<a class="btn btn-outline-secondary btn-suspend-action mt-1"
    href
    ng-click="openDialog()"
    uib-tooltip="{{ 'PLUGIN_UPDATE_ACTION_TOOLTIP_1' | translate }}"
@@ -7,7 +7,7 @@
    ng-show="!processInstance.suspended">
   <span class="glyphicon glyphicon-pause"></span>
 </a>
-<a class="btn btn-default btn-toolbar"
+<a class="btn btn-outline-secondary mt-1"
    href
    ng-click="openDialog()"
    uib-tooltip="{{ 'PLUGIN_UPDATE_ACTION_TOOLTIP_2' | translate }}"
