--- a/webapps/frontend/ui/cockpit/plugins/base/app/views/processesDashboard/process-definitions.html
+++ b/webapps/frontend/ui/cockpit/plugins/base/app/views/processesDashboard/process-definitions.html
@@ -10,9 +10,9 @@
     </button>
     <header ng-if="processDefinitionsCount">
       <div class="row">
-        <h1 class="col-xs-6 section-title">{{ processDefinitionsCount }} {{ (processDefinitionsCount > 1 ? 'PLUGIN_PROCESS_DEF_PROCESS_DEFINITIONS_DEPLOYED' : 'PLUGIN_PROCESS_DEF_PROCESS_DEFINITION_DEPLOYED' | translate) }}</h1>
+        <h1 class="col-6 section-title">{{ processDefinitionsCount }} {{ (processDefinitionsCount > 1 ? 'PLUGIN_PROCESS_DEF_PROCESS_DEFINITIONS_DEPLOYED' : 'PLUGIN_PROCESS_DEF_PROCESS_DEFINITION_DEPLOYED' | translate) }}</h1>
 
-        <div class="col-xs-6 text-right" ng-if="activeSection">
+        <div class="col-6 text-right" ng-if="activeSection">
           <ul class="nav nav-tabs">
             <li ng-class="{active: activeTab === 'list'}">
               <a ng-click="selectTab('list')">{{'PLUGIN_PROCESS_DEF_LIST' | translate}}</a>
@@ -129,9 +129,9 @@
           </table>
 
           <div ng-if="activeTab === 'previews'"
-               class="tile-grid">
+               class="row tile-grid">
             <div ng-repeat="pd in processDefinitionData"
-                 class="tile col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                 class="tile col-12 col-sm-6 col-md-4 col-lg-3">
               <a href="#/process-definition/{{ pd.id }}">
                 <h4 class="tile-header">
                   {{ pd.name || pd.key }}
