--- a/webapps/frontend/ui/cockpit/plugins/jobDefinition/app/views/processDefinition/job-definition-suspension-state-dialog.html
+++ b/webapps/frontend/ui/cockpit/plugins/jobDefinition/app/views/processDefinition/job-definition-suspension-state-dialog.html
@@ -25,8 +25,8 @@
           ng-submit="updateSuspensionState()">
 
       <fieldset>
-        <div class="form-group">
-          <label class="col-xs-4 control-label"
+        <div class="form-group row">
+          <label class="col-sm-5 col-4 control-label"
                  for="includeJobsValue">
             {{ 'PLUGIN_JOBDEFINITION_INCLUDE_EXISTING_JOB' | translate }}
             <!-- activation -->
@@ -45,7 +45,7 @@
           </label>
 
 
-          <div class="col-xs-8 checkbox">
+          <div class="col-sm-7 col-8 checkbox">
             <label>
               <input id="includeJobsValueId"
                      name="includeJobsValue"
@@ -55,8 +55,8 @@
           </div>
         </div>
 
-        <div class="form-group">
-          <label class="col-xs-4 control-label"
+        <div class="form-group row">
+          <label class="col-sm-5 col-4 control-label"
                  for="executeImmediately">
             {{ 'PLUGIN_JOBDEFINITION_EXECUTE' | translate }}
             <span class="glyphicon glyphicon-question-sign"
@@ -72,7 +72,7 @@
             </span>
           </label>
 
-          <div class="col-xs-8">
+          <div class="col-sm-7 col-8">
             <div class="radio">
               <label>
                 <input ng-model="data.executeImmediately"
@@ -95,14 +95,14 @@
           </div>
         </div>
 
-        <div class="form-group"
+        <div class="form-group row"
              ng-show="!data.executeImmediately">
-          <label class="col-xs-4 control-label"
+          <label class="col-sm-5 col-4 control-label"
                  for="executionDateValue">
             {{ 'PLUGIN_JOBDEFINITION_SCHEDULE_AT' | translate }}
           </label>
 
-          <div class="col-xs-8">
+          <div class="col-sm-7 col-8">
             <input name="executionDateValue"
                    ng-model="data.executionDate"
                    class="form-control"
