--- a/webapps/frontend/ui/common/styles/glyphicon-overrides.scss
+++ b/webapps/frontend/ui/common/styles/glyphicon-overrides.scss
@@ -9,7 +9,7 @@
 
     &::before {
       vertical-align: text-bottom;
-      font-family: @font-family-base;
+      font-family: $font-family-base;
     }
   }
 
